--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.40.0",
+    "@tanstack/vue-query-devtools": "^5.40.0",
+    "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
